--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>%VITE_APP_ENV_TAG%FX Nexus</title>
+    <script type="module">
+      if (import.meta.env.DEV) {
+        import('react-scan').then((module) => {
+          module.scan({
+            enabled: true,
+          })
+        })
+      }
+    </script>
   </head>
   <body class="dark:bg-black">
     <div id="root"></div>
