--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>%VITE_APP_ENV_TAG%FX Nexus</title>
-    <script type="module">
+    <!-- <script type="module">
       if (import.meta.env.DEV) {
         import('react-scan').then((module) => {
           module.scan({
@@ -13,7 +13,7 @@
           })
         })
       }
-    </script>
+    </script> -->
   </head>
   <body class="dark:bg-black">
     <div id="root"></div>
